clusters/talos-cluster/filebrowser/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: filebrowser-ingress
  namespace: filebrowser
  annotations:
    tailscale.com/funnel: "true"
spec:
  defaultBackend:
    service:
      name: filebrowser-service
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - drive
